Fix page spacing

--- a/style.css
+++ b/style.css
@@ -3,19 +3,25 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    margin-top: -20%;
     font-family:'Courier New', Courier, monospace;
     font-weight: 600;
 }
 
-#results,
-fieldset {
-    margin: 3%;
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 10px;
 }
+/* #results,
+fieldset {
+    padding: 3%;
+} */
 
 #results a {
     display: flex;
@@ -26,4 +32,8 @@ fieldset {
 
 input:placeholder-shown {
     font-style: italic;
+}
+
+footer {
+    text-align: center;
 }
